fix(style.css, index.pug): add exchange source tooltip, fix table overflow on mobile horizontal (#45)

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -378,6 +378,10 @@ div.dataTables_paginate {
   margin: 15px 0px !important;
 }
 
+.tooltip-inner {
+  word-break: break-all;
+}
+
 .xcard {
   margin-bottom: 24px;
 }
@@ -404,6 +408,12 @@ div.dataTables_paginate {
   .settings-icon {
     margin-top: 0.5rem;
     margin-left: 0px;
+  }
+
+  .table-responsive-sm {
+    overflow: scroll;
+    display: block;
+    width: 100%;
   }
 }
 
